tests/snapshots/server_spec__server_spec__req-3.snap
---
source: tests/server_spec.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "error": {
    "message": "Unable to parse request"
  },
  "code": 500
}
