tests/snapshots/server_spec__server_spec__req-5.snap
---
source: tests/server_spec.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "error": {
    "message": "Unable to determine Authority"
  }
}
